# const-ft

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
