[package]
name = "const-ft"
version = "0.1.0"
authors = ["dylan_DPC <dylan.dpc@gmail.com>"]
description = "A library to generate and parse UUIDs."
documentation = "https://docs.rs/const-ft"
exclude = [
    ".github/**",
    ".travis.yml",
    "appveyor.yml",
    "bors.toml"
]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Dylan-DPC/const-ft"
readme = "README.md"
repository = "https://github.com/Dylan-DPC/const-ft"


[dependencies]

[features]
const_fn = []
default = []